# magnum-bootstrap

./: CMakeLists.txt
src/: CMakeLists.txt  MyApplication.cpp
src/visualization/: CMakeLists.txt  VisualizationPrimitives.cpp  VisualizationPrimitives.h
